<resources>
    <string name="app_name">eRajd 2018</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Wyloguj</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="login_msg">eRajd 2018</string>
    <string name="title_activity_logged">eRajd 2018</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Ustawienia</string>
    <string name="plan">Plan eRajdu</string>
    <string name="challange">Challenge</string>
    <string name="voleyball">Siatkówka</string>
    <string name="football">Piłka nożna</string>
    <string name="organizer">Organizator</string>
    <string name="location">Ośrodek</string>
    <string name="title_activity_plan">Plan eRajdu</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="title_activity_volleyball">Siatkówka</string>
    <string name="title_activity_football">Piłka nożna</string>
    <string name="title_activity_organizer">Organizator</string>
    <string name="title_activity_location">Ośrodek</string>
    <string name="title_activity_contact">Organizator</string>
    <string name="day1">Dzień 1</string>
    <string name="day2">Dzień 2</string>
    <string name="day3">Dzień 3</string>
    <string name="google_android_map_api_key">AIzaSyAJXolJnLNi5HnBIb6fKy0xrSIUjUhTnWI</string>
    <string name="team_name">Nazwa drużyny</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="phone">Numer telefonu</string>
    <string name="person1">Pierwszy członek</string>
    <string name="person2">Drugi członek</string>
    <string name="person3">Trzeci członek</string>
    <string name="person4">Czwarty członek</string>
    <string name="person5">Piąty członek</string>
    <string name="person6">Szósty członek</string>
    <string name="submmit_team">Zgłoś drużynę</string>
    <string name="current_game">Trwający mecz</string>
    <string name="no_current_game">Nie trwa obecnie żaden mecz</string>
    <string name="select_picture">Wybierz zdjęcie</string>
    <string name="submit">Wyślij</string>
    <string name="channel_name">nazwa kanału</string>
    <string name="channel_description">opis kanału</string>
    <string name="app_info">O aplikacji</string>
    <string name="app_info_1">Aplikacja zrobiona przez Jacek Piskorz i Piotr Ćwięka w ramach projektu z przedmiotu Języki Programowania Wysokiego Poziomu prowadzonego przez dr. inż. Anrzeja Głowacza</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
