<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:hint="@string/team_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_picture"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/submit_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:enabled="false"/>


    </LinearLayout>

</LinearLayout>
